fix: first pass fixing broken css

--- a/client/styles/components/_home.scss
+++ b/client/styles/components/_home.scss
@@ -8,10 +8,10 @@
   color: white;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 1rem;
   padding: 2rem 0;
-  @include media(">=medium") {
+  @include media('>=medium') {
     padding: 3rem 0;
   }
-  @include media(">=large") {
+  @include media('>=large') {
     padding: 4rem 0;
   }
   position: relative;
@@ -22,14 +22,14 @@
     font-weight: 500;
     margin-bottom: 0;
     text-transform: none;
-    @include media("<=small") {
+    @include media('<=small') {
       display: none;
     }
-    @include media(">=medium") {
+    @include media('>=medium') {
       margin-top: 1rem;
       margin-bottom: 1rem;
     }
-    @include media(">=large") {
+    @include media('>=large') {
       margin-top: 2rem;
       margin-bottom: 2rem;
     }
@@ -122,7 +122,13 @@
 }
 
 .featuresteps {
-  @include media(">=medium") {
+  @include media('<medium') {
+    display: flex;
+    flex-direction: column;
+    align-items: center; // center container & arrows
+    gap: 1em;
+  }
+  @include media('>=medium') {
     display: table; //ie9 fallback
     display: flex;
     justify-content: space-between;
@@ -137,11 +143,11 @@
     max-width: 3em;
     margin: 0 1em;
     position: relative; // for safari
-    @include media("<=small") {
+    @include media('<=small') {
       height: 2rem;
       margin: 1rem 37.5%;
     }
-    @include media(">=large") {
+    @include media('>=large') {
       flex-basis: 4em;
       max-width: 4em;
       margin: 0 2em;
@@ -157,7 +163,10 @@
     .ttb {
       display: none;
     }
-    @include media("<=small") {
+    @include media('<=medium') {
+      position: static; // reveals arrows on smaller devices
+    }
+    @include media('<=medium') {
       .ltr {
         display: none;
       }
@@ -177,7 +186,7 @@
   .icon {
     font-size: 2rem;
     vertical-align: top;
-    @include media(">=medium") {
+    @include media('>=medium') {
       display: block;
       margin-bottom: 1rem;
       font-size: 3rem;
@@ -190,11 +199,11 @@
     font-weight: 500;
     text-align: center;
     margin-bottom: 0.5rem;
-    @include media(">=medium") {
+    @include media('>=medium') {
       text-align: left;
       margin-bottom: 1rem;
     }
-    @include media(">=large") {
+    @include media('>=large') {
       font-size: 3rem;
     }
   }
@@ -210,7 +219,7 @@
     font-weight: 500;
     margin: 0;
     text-align: center;
-    @include media(">=medium") {
+    @include media('>=medium') {
       text-align: left;
     }
   }
@@ -226,11 +235,11 @@
 @mixin home-section($top: 2rem, $bottom: 2rem) {
   padding-top: $top;
   padding-bottom: $bottom;
-  @include media(">=medium") {
+  @include media('>=medium') {
     padding-top: $top * 1.5;
     padding-bottom: $bottom * 1.5;
   }
-  @include media(">=large") {
+  @include media('>=large') {
     padding-top: $top * 2;
     padding-bottom: $bottom * 2;
   }
@@ -240,11 +249,11 @@
     line-height: 1;
     text-transform: uppercase;
     margin: 0 0 1em 0;
-    @include media(">=medium") {
+    @include media('>=medium') {
       margin: 1em 0;
       font-size: 2rem;
     }
-    @include media(">=large") {
+    @include media('>=large') {
       font-size: 2.5rem;
     }
   }
@@ -277,7 +286,7 @@
 .smg-map {
   display: block;
 
-  @include media(">=medium") {
+  @include media('>=medium') {
     display: flex;
     &__imgratio {
       height: percentage(340 / 400);
@@ -300,10 +309,10 @@
     width: 118px * 0.75;
     height: 71px * 0.75;
     display: none;
-    @include media(">=medium") {
+    @include media('>=medium') {
       display: block;
     }
-    @include media(">=large") {
+    @include media('>=large') {
       width: 118px;
       height: 71px;
     }
@@ -317,7 +326,7 @@
     h3 {
       font-size: 1em;
     }
-    @include media(">=large") {
+    @include media('>=large') {
       margin-top: 2rem;
       font-size: 1.5em;
       line-height: 1.2;
@@ -330,10 +339,10 @@
     background-color: black;
     margin: 1rem 2rem;
     display: none;
-    @include media(">=medium") {
+    @include media('>=medium') {
       display: block;
     }
-    @include media(">=large") {
+    @include media('>=large') {
       margin: 1rem 4rem;
     }
   }
