--- a/client/styles/components/_record.scss
+++ b/client/styles/components/_record.scss
@@ -417,7 +417,7 @@
     display: grid;
     padding: 0 0.5rem;
     gap: 2em 1em;
-    grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
   }
 
   &__figure {
